<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.study.android.ahu.lab8.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/backgroundColor">

        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_twenty"
            android:layout_marginBottom="@dimen/margin_twenty_five"
            android:background="@color/buttonColor"
            android:textColor="@color/white"
            android:text="@string/buttonText"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margin_five">

            <TextView
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/name"/>

            <TextView
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/birthday"/>

            <TextView
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/gift"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/lineColor"/>

        <ListView
            android:id="@+id/birthday_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>
