<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/margin_twenty"
    android:paddingRight="@dimen/margin_twenty">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_twenty"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/edit_name"
            android:textSize="@dimen/textSize"/>
        
        <TextView
            android:id="@+id/dialog_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/edit_birthday"
            android:textSize="@dimen/textSize"/>
        
        <EditText
            android:id="@+id/dialog_birthday"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/textSize"/>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_twenty_five">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_gift"
            android:textSize="@dimen/textSize"/>

        <EditText
            android:id="@+id/dialog_gift"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/textSize"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_twenty_five">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/buttonColor"
            android:textSize="@dimen/textSize"/>

        <TextView
            android:id="@+id/dialog_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/buttonColor"
            android:textSize="@dimen/textSize"/>

    </LinearLayout>

</LinearLayout>